# gencommit

./: .gencommit.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: claude.rs  cli.rs  codex.rs  config.rs  git.rs  main.rs  selector.rs
