[package]
name = "gencommit"
version = "0.1.0"
edition = "2024"
description = "Generate and approve Git commit messages with a ChatGPT-backed Codex CLI"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

