[package]
name = "gencommit"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Generate and approve Git commit messages with subscription-backed coding CLIs"
license = "MIT"
repository = "https://github.com/unlomtrois/gencommit"
homepage = "https://github.com/unlomtrois/gencommit"
readme = "README.md"
keywords = ["git", "commit", "cli", "ai", "terminal"]
categories = ["command-line-utilities", "development-tools"]
publish = ["crates-io"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
